--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -3,8 +3,7 @@
 
 // Define your custom styles for the dark theme here
 body {
-    background-color: #000;
-    color: #fff;
+    background-color: #5A5A5A;
 }
 
 a {
